# go2_ws

src/legged_common/: CMakeLists.txt  package.xml
src/legged_common/include/legged_common/: DataTypes.hpp  GamePad.hpp  kinematics.hpp  matTools.hpp  parameters.hpp
src/legged_common/src/: GamePad.cpp  GamePad_node.cpp  kinematics.cpp  matTools.cpp
src/legged_controllers/: CMakeLists.txt  legged_controllers_plugins.xml  package.xml
src/legged_controllers/config/: controllers.yaml
src/legged_controllers/config/go2/: reference.info  task.info
src/legged_controllers/config/tekir/: reference.info  task.info
src/legged_controllers/include/legged_controllers/: BalanceController.hpp  FootSwingTrajectory.hpp  GaitScheduler.hpp  Go2BalanceController.h  Go2MPC.h  Go2SquatController.h  Go2WBC.h  Go2WBIC.h  LeggedGo2SquatController.h  LeggedGo2TabletController.h  MPC.hpp  WBC.hpp  trajectory.hpp
src/legged_controllers/include/legged_controllers/BalanceController/: BalanceController.hpp  VMC.hpp
src/legged_controllers/include/legged_controllers/MPC/: AsyncMPC.hpp  MPC.hpp
src/legged_controllers/include/legged_controllers/TaskSet/: BodyOriTask.hpp  BodyPosTask.hpp  FootPosTask.hpp  SingleContactTask.hpp  Task.hpp
src/legged_controllers/include/legged_controllers/WBC/: WBC.hpp  WBIC.hpp
src/legged_controllers/include/legged_controllers/WBC/TaskSet/: BodyOriTask.hpp  BodyPosTask.hpp  FootPosTask.hpp  SingleContactTask.hpp  Task.hpp
src/legged_controllers/launch/: load_controller_go2.launch
src/legged_controllers/src/: BalanceController.cpp  ComTrajectory.cpp  FootSwingTrajectory.cpp  GaitScheduler.cpp  GamePad.cpp  Go2BalanceController.cpp  Go2MPC.cpp  Go2SquatController.cpp  Go2WBC.cpp  Go2WBIC.cpp  LeggedGo2SquatController.cpp  LeggedGo2TabletController.cpp  MPC.cpp  StateEstimator.cpp  WBC.cpp  trajectory.cpp
src/legged_controllers/src/BalanceController/: BalanceController.cpp  VMC.cpp
src/legged_controllers/src/MPC/: AsyncMPC.cpp  MPC.cpp
src/legged_controllers/src/TaskSet/: BodyOriTask.cpp  BodyPosTask.cpp  FootPosTask.cpp  SingleContactTask.cpp
src/legged_controllers/src/WBC/: WBC.cpp  WBIC.cpp
src/legged_controllers/src/WBC/TaskSet/: BodyOriTask.cpp  BodyPosTask.cpp  FootPosTask.cpp  SingleContactTask.cpp
src/legged_estimator/: CMakeLists.txt  package.xml
src/legged_estimator/include/legged_estimator/: StateEstimator.hpp
src/legged_estimator/src/: StateEstimator.cpp
src/legged_examples/legged_unitree/legged_unitree_description/launch/: display.launch  gazebo_sim.launch
src/legged_examples/legged_unitree/legged_unitree_description/rviz/: urdf.rviz
src/legged_examples/legged_unitree/legged_unitree_description/urdf/b2/: b2.urdf
src/legged_examples/legged_unitree/legged_unitree_description/urdf/go2/: go2.urdf
src/legged_gazebo/: CMakeLists.txt
src/legged_gazebo/worlds/: empty_world.world
src/legged_robot/: CMakeLists.txt  package.xml
src/legged_robot/launch/: start_controllers.launch  start_sim.launch
src/legged_robot/scripts/: controller_switcher.py
src/legged_trajectory/: CMakeLists.txt  package.xml
src/legged_trajectory/include/legged_trajectory/: ComTrajectory.hpp  FootSwingTrajectory.hpp  GaitScheduler.hpp  Trajectory.hpp
src/legged_trajectory/src/: ComTrajectory.cpp  FootSwingTrajectory.cpp  GaitScheduler.cpp  Trajectory.cpp  trajectory_node.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/include/simulation/: main_sim.hpp  simulationBridge.hpp
src/simulation/rsc/urdf/: go2_2.urdf
src/simulation/src/: main_sim.cpp  simulationBridge.cpp
